-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.6.0
-
None
-
Windows 7 xz64
This seems to be a regression for some versions (I think it happens at least since 3.3)
Steps to reproduce:
1. Do an operation that leads to a merge conflict (in my case git pull + rebase)
2. Open the commit editor and double click the "modified by both" file
3. The merge tool opens (in my case Tortoise Git Merge), resolve the conflict, close the merge tool
4. The commit editor still shows State "modified by both" and does not allow to press commit
5. Do a context change to another Creator window, e.g. by Ctrl+Tab, switch back to commit editor: the State changed to "staged + modified"
6. Now it's possible to commit
In former versions the steps 4 and 5 were not necessary.